--- a/investment-api/package.json
+++ b/investment-api/package.json
@@ -17,13 +17,14 @@
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-cron": "^4.0.7",
+    "path-to-regexp": "^6.2.1",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7"
   },
